# aoc

./: Cargo.toml
aoc_codegen/: Cargo.toml
aoc_codegen/src/: lib.rs
examples/: aoc.rs
src/: cli.rs  client.rs  config.rs  leaderboard.rs  lib.rs  util.rs
