[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "aoc"
description = "Advent of code helpers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panicbit/aoc"
version = "0.3.2"

[dependencies]
chrono-tz = "0.5.0"
clap = "2.32.0"
dirs = "3.0.0"
failure = "0.1.3"
itertools = "0.10.1"
lazy_static = "1.2.0"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
select = "0.5.0"
serde = "1.0.80"
serde_derive = "1.0.80"
structopt-derive = "0.4.18"
open = "1.2.2"
chrono = { version = "0.4.6", features = ["serde"] }
aoc_codegen = { version = "0.1", path = "aoc_codegen" }
config = "0.9.1"
directories = "1.0.2"
serde_json = "1.0.33"
