[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "aoc"
description = "Advent of code helpers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panicbit/aoc"
version = "0.4.0"

[dependencies]
chrono-tz = "0.6.0"
clap = "2.32.0"
dirs = "4.0.0"
failure = "0.1.3"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
select = "0.5.0"
serde = "1.0.80"
serde_derive = "1.0.80"
open = "2.0.2"
chrono = { version = "0.4.6", features = ["serde"] }
aoc_codegen = { version = "0.1", path = "aoc_codegen" }
directories = "4.0.1"
serde_json = "1.0.33"
