[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "aoc"
description = "Advent of code helpers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panicbit/aoc"
version = "0.6.0"
edition = "2021"

[dependencies]
chrono-tz = "0.8.4"
clap = { version = "4.4.11", features = ["string"] }
dirs = "5.0.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
select = "0.6.0"
serde = "1.0.193"
serde_derive = "1.0.193"
open = "5.0.1"
chrono = { version = "0.4.31", features = ["serde"] }
aoc_codegen = { version = "0.2", path = "aoc_codegen" }
directories = "5.0.1"
serde_json = "1.0.108"
anyhow = "1.0.80"

[workspace]
