[package]
name = "aoc_codegen"
description = "Codegen for the aoc crate"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panicbit/aoc"
authors = ["panicbit <panicbit.dev@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6.10"
syn = { version = "0.15.21", features = ["full"] }
