[package]
name = "aoc_codegen"
description = "Codegen for the aoc crate"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/panicbit/aoc"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.41", features = ["full"] }
